--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -2345,6 +2345,16 @@ html, body {
     flex-direction: column;
 }
 
+.review-card__container--folded {
+    height: 0;
+    overflow: hidden;
+    will-change: height;
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    -o-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+    margin-top: -12px;
+}
+
 .contact__container h2 {
     color: #000;
     text-align: center;
