--- a/css/styles.css
+++ b/css/styles.css
@@ -1784,16 +1784,6 @@ body {
     padding-left: 40px;
 }
 
-.services-hub__item.is-folded {
-    margin: 0;
-    height: 0;
-    will-change: height;
-    overflow: hidden;
-    -webkit-transition: all 0.3s ease-in-out 0s;
-    -o-transition: all 0.3s ease-in-out 0s;
-    transition: all 0.3s ease-in-out 0s;
-}
-
 .services-hub__link {
     color: rgba(81, 111, 166, 0.80);
     font-size: 14px;
@@ -2418,6 +2408,8 @@ body {
     border-top: 1px solid #00000019;
     padding: 5px 0;
     width: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .photo-doctor-clinic img {
@@ -3837,7 +3829,9 @@ body {
 }
 
 .specialisations__body {
-
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .specialisations {
@@ -4069,6 +4063,10 @@ body {
 
 .services__search {
     margin-bottom: 24px;
+}
+
+.specialisations__services:not(.is-active) {
+    display: none;
 }
 
 .specialisations__services {
@@ -4341,6 +4339,35 @@ body {
     font-weight: 400;
     text-align: center;
     padding-bottom: 10px;
+}
+
+.faq__btn.is-active .faq__arrow {
+    -webkit-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+
+.faq__arrow {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-flex: 0;
+    -ms-flex: none;
+    flex: none;
+    margin-left: auto;
+    color: #8b8d93;
+    font-size: 0.375rem;
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    -o-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s;
+    width: 29px;
+    height: 31px;
 }
 
 .btn-more {
