--- a/css/styles.css
+++ b/css/styles.css
@@ -806,7 +806,7 @@ body {
     font-weight: 600;
 }
 
-.sort__container h5 {
+.sort__container h1 {
     color: #000;
     text-align: center;
     font-size: 20px;
@@ -980,6 +980,17 @@ body {
     align-items: center;
 }
 
+.clinic-card__photo-clinic img {
+    max-width: 200px;
+    width: 100%;
+    max-height: 180px;
+    height: 100%;
+}
+
+.clinic-card__photo-clinic {
+    margin-bottom: 15px;
+}
+
 .clinic-card__body-right {
     border-radius: 4px;
     border: 1px solid rgba(81, 111, 166, 0.50);
@@ -1107,7 +1118,6 @@ body {
     flex-wrap: wrap;
     align-content: flex-start;
     align-items: flex-start;
-    justify-content: space-around;
 }
 
 .clinic-card__star img {
@@ -1266,6 +1276,10 @@ body {
     margin: 0 5px;
 }
 
+.clinic-card__phone {
+    padding: 15px 0;
+}
+
 .clinic-card__phone a {
     color: #000;
     font-size: 16px;
@@ -1384,6 +1398,14 @@ body {
     border-radius: 13px;
     background: #FFF;
     margin: 15px 0;
+}
+
+.popular-questions h1 {
+    color: #000;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 15px 0;
+    text-align: center;
 }
 
 .popular-questions h5 {
@@ -2417,12 +2439,12 @@ body {
     height: 151px;
 }
 
-.doctor-card__listing__item h5:last-child {
+.doctor-card__listing:last-child {
     border-top: 1px solid #00000019;
     border-bottom: none;
 }
 
-.doctor-card__listing__item h5:first-child {
+.doctor-card__listing:first-child {
     border-bottom: 1px solid #00000019;
     border-top: none;
 }
@@ -2558,7 +2580,10 @@ body {
 }
 
 .photo-doctor img {
-    width: 180px;
+    max-width: 200px;
+    width: 100%;
+    max-height: 180px;
+    height: 100%;
 }
 
 .doctor-card__doctor-experience {
@@ -2597,15 +2622,33 @@ body {
     width: 40px;
 }
 
-.doctor-card__ambulance-house {
+.doctor-card--advant {
     display: flex;
     flex-direction: row;
     align-items: center;
     margin: 15px 0;
 }
 
-.doctor-card__ambulance-house p {
+.doctor-card--advant p {
     margin: 0;
+}
+
+.doctor-card--advant ul {
+    margin: 0;
+    padding: 0;
+}
+
+.doctor-card--advant li {
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px 0;
+}
+
+.doctor-card--advant img {
+    width: 40px;
+    margin-right: 10px;
 }
 
 .doctor-card__doctor-data {
@@ -3360,6 +3403,10 @@ body {
 
 .information__photo:nth-child(n+13):not(.is-visible) {
     display: none;
+}
+
+.information__photo a {
+    text-decoration-line: none;
 }
 
 .information__photo img {
@@ -4441,9 +4488,6 @@ body {
 
     .clinic-card {
         display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        flex-direction: row;
     }
 
     .clinic-card__body-left {
@@ -4452,6 +4496,18 @@ body {
         max-width: 800px;
         width: 100%;
         padding: 10px 0;
+    }
+
+    .clinic-card__photo-clinic img {
+        width: 150px;
+    }
+
+    .clinic-card__metro {
+        padding: 15px 0;
+    }
+
+    .clinic-card__phone {
+        padding-bottom: 15px;
     }
 
     .user__content {
