--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -3374,221 +3374,6 @@ html, body {
 
 
 
-@media (min-width: 600px) {
-
-    .actions__doctors {
-        width: 340px;
-        margin: 10px 5px;
-        position: relative;
-    }
-
-    .actions__doctors img {
-        position: absolute;
-        right: 0;
-        bottom: 0;
-        z-index: -5;
-        width: 140px;
-        height: 126px;
-    }
-
-    .actions__brand {
-        width: 340px;
-        margin: 10px 5px;
-        position: relative;
-    }
-    .actions__brand img {
-        position: absolute;
-        right: 0;
-        bottom: 0;
-        z-index: -5;
-        width: 140px;
-        height: 130px;
-    }
-
-    .actions__all-count {
-        width: 340px;
-        margin: 10px 5px;
-        position: relative;
-    }
-
-    .actions__all-count img {
-        position: absolute;
-        right: 0;
-        bottom: 0;
-        z-index: -5;
-        width: 140px;
-        height: 130px;
-    }
-
-    .actions__doctors-house {
-        width: 340px;
-        margin: 10px 5px;
-        position: relative;
-    }
-
-    .actions__doctors-house img {
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        z-index: -5;
-        width: 145px;
-        height: 126px;
-    }
-
-    .actions__services {
-        width: 340px;
-        margin: 10px 5px;
-        position: relative;
-    }
-
-    .actions__services img {
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        z-index: -5;
-    }
-
-    .actions__items {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-    }
-
-    .search__container {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .search__city-metro {
-        max-width: 340px;
-        width: 100%;
-    }
-
-    .search__clinic-doctor {
-        margin: 0 10px;
-        max-width: 340px;
-        width: 100%;
-    }
-
-    .clinic-card {
-        display: flex;
-        flex-direction: row;
-    }
-
-    .clinic-card__head {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        align-content: center;
-        justify-content: flex-start;
-        align-items: center;
-        padding: 15px;
-    }
-
-    .clinic-card__body {
-        display: flex;
-        padding: 10px 15px;
-        flex-direction: column;
-        justify-content: flex-start;
-    }
-
-    .clinic-card__footer {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        align-items: flex-start;
-        align-content: flex-start;
-    }
-
-    .listing ul {
-        list-style-type: none;
-        margin: 2px;
-        padding: 2px;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    .listing li {
-        margin: 0 5px;
-    }
-
-    .clinic-card__doctors {
-        display: flex;
-        justify-content: flex-start;
-        flex-direction: column;
-        align-items: center;
-        width: 100%;
-        padding: 0 15px;
-    }
-
-    .relinks__body {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: flex-start;
-        align-content: center;
-    }
-
-    .relinks__column {
-        border-radius: 13px;
-        background: #FFF;
-        padding: 10px 20px;
-        margin: 15px;
-        max-width: 300px;
-        width: 100%;
-        height: 100%;
-    }
-
-    .search__btn {
-        width: 300px;
-    }
-
-    .contact-btn {
-        display: flex;
-        justify-content: center;
-    }
-
-    .feedback__head {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-    }
-
-    .feedback__sms-patient {
-        width: 650px;
-    }
-
-    .feedback__name-patient, .feedback__phone-patient {
-        margin: 0 10px;
-    }
-
-    .feedback__body {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-}
-
-@media (min-width: 1100px) {
-
-    .actions__doctors-house img {
-        width: 175px;
-        height: 158px;
-    }
-
-    .actions__doctors img {
-        width: 155px;
-        height: 158px;
-    }
-}
-
-
 .faq {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -3828,7 +3613,6 @@ html, body {
 }
 
 .popup>div {
-    padding: 15px;
     height: 100%;
 }
 
@@ -3875,4 +3659,337 @@ html, body {
     -webkit-box-sizing: border-box;
     padding: 11px 16px 12px;
     cursor: pointer;
+}
+
+
+.overlay {
+    display: none;
+    position: fixed;
+    background: rgba(0, 0, 0, .74);
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    top: 0;
+    left: 0
+}
+
+.record-form, .review-form, .overlay {
+    display: none;
+}
+
+
+.show-record-form .overlay {
+    display: block;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.7;
+    z-index: 100;
+}
+
+.show-review-form .overlay {
+    display: block;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.7;
+    z-index: 100;
+}
+
+
+.show-review-form .review-form {
+    display: block;
+    position: fixed;
+    height: 700px;
+    top: calc(22% - 90px);
+    left: calc(25% - 80px);
+    padding: 30px;
+    z-index: 200;
+    width: 350px;
+    background: #fff;
+    border-radius: 4px;
+}
+
+.show-record-form .record-form {
+    display: block;
+    position: fixed;
+    height: 800px;
+    top: calc(13% - 90px);
+    left: calc(31% - 89px);
+    padding: 15px;
+    z-index: 200;
+    width: 330px;
+    background: #fff;
+    border-radius: 4px;
+}
+
+.review-form .close-form {
+    position: absolute;
+    top: -38px;
+    right: -15px;
+    font-size: 21px;
+    cursor: pointer;
+}
+
+.record-form .close-form {
+    position: absolute;
+    top: -15px;
+    right: -29px;
+    font-size: 21px;
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (min-width: 600px) {
+
+    .actions__doctors {
+        width: 340px;
+        margin: 10px 5px;
+        position: relative;
+    }
+
+    .actions__doctors img {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        z-index: -5;
+        width: 140px;
+        height: 126px;
+    }
+
+    .actions__brand {
+        width: 340px;
+        margin: 10px 5px;
+        position: relative;
+    }
+    .actions__brand img {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        z-index: -5;
+        width: 140px;
+        height: 130px;
+    }
+
+    .actions__all-count {
+        width: 340px;
+        margin: 10px 5px;
+        position: relative;
+    }
+
+    .actions__all-count img {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        z-index: -5;
+        width: 140px;
+        height: 130px;
+    }
+
+    .actions__doctors-house {
+        width: 340px;
+        margin: 10px 5px;
+        position: relative;
+    }
+
+    .actions__doctors-house img {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        z-index: -5;
+        width: 145px;
+        height: 126px;
+    }
+
+    .actions__services {
+        width: 340px;
+        margin: 10px 5px;
+        position: relative;
+    }
+
+    .actions__services img {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        z-index: -5;
+    }
+
+    .actions__items {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+
+    .search__container {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .search__city-metro {
+        max-width: 340px;
+        width: 100%;
+    }
+
+    .search__clinic-doctor {
+        margin: 0 10px;
+        max-width: 340px;
+        width: 100%;
+    }
+
+    .clinic-card {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .clinic-card__head {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-content: center;
+        justify-content: flex-start;
+        align-items: center;
+        padding: 15px;
+    }
+
+    .clinic-card__body {
+        display: flex;
+        padding: 10px 15px;
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+
+    .clinic-card__footer {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        align-content: flex-start;
+    }
+
+    .listing ul {
+        list-style-type: none;
+        margin: 2px;
+        padding: 2px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .listing li {
+        margin: 0 5px;
+    }
+
+    .clinic-card__doctors {
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        padding: 0 15px;
+    }
+
+    .relinks__body {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        align-content: center;
+    }
+
+    .relinks__column {
+        border-radius: 13px;
+        background: #FFF;
+        padding: 10px 20px;
+        margin: 15px;
+        max-width: 300px;
+        width: 100%;
+        height: 100%;
+    }
+
+    .search__btn {
+        width: 300px;
+    }
+
+    .contact-btn {
+        display: flex;
+        justify-content: center;
+    }
+
+    .feedback__head {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    .feedback__sms-patient {
+        width: 650px;
+    }
+
+    .feedback__name-patient, .feedback__phone-patient {
+        margin: 0 10px;
+    }
+
+    .feedback__body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .show-review-form .review-form {
+        display: block;
+        position: fixed;
+        height: 600px;
+        top: calc(22% - 90px);
+        left: calc(25% - 80px);
+        padding: 30px;
+        z-index: 200;
+        width: 550px;
+        background: #fff;
+        border-radius: 4px;
+    }
+
+    .show-record-form .record-form {
+        display: block;
+        position: fixed;
+        height: 740px;
+        top: calc(13% - 90px);
+        left: calc(31% - 89px);
+        padding: 15px;
+        z-index: 200;
+        width: 530px;
+        background: #fff;
+        border-radius: 4px;
+    }
+
+}
+
+@media (min-width: 1100px) {
+
+    .actions__doctors-house img {
+        width: 175px;
+        height: 158px;
+    }
+
+    .actions__doctors img {
+        width: 155px;
+        height: 158px;
+    }
 }
