--- a/css/styles.css
+++ b/css/styles.css
@@ -5023,16 +5023,6 @@ body {
 }
 
 
-
-
-.popup {
-    position: absolute;
-    width: 650px;
-    background: #fff;
-    border-radius: 4px;
-    z-index: 999;
-}
-
 .pp-title {
     font-size: 18px;
     margin: 0 0 15px;
@@ -5177,5 +5167,86 @@ body {
     -o-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     padding: 11px 16px 12px;
+    cursor: pointer;
+}
+
+
+
+.overlay {
+    display: none;
+    position: fixed;
+    background: rgba(0, 0, 0, .74);
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    top: 0;
+    left: 0
+}
+
+.record-form, .review-form, .overlay {
+    display: none;
+}
+
+
+.show-record-form .overlay {
+    display: block;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.7;
+    z-index: 100;
+}
+
+.show-review-form .overlay {
+    display: block;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.7;
+    z-index: 100;
+}
+
+
+.show-review-form .review-form {
+    display: block;
+    position: fixed;
+    height: 500px;
+    top: calc(22% - 90px);
+    left: calc(50% - 250px);
+    padding: 30px;
+    z-index: 200;
+    width: 650px;
+    background: #fff;
+    border-radius: 4px;
+}
+
+.show-record-form .record-form {
+    display: block;
+    position: fixed;
+    height: 600px;
+    top: calc(22% - 90px);
+    left: calc(50% - 250px);
+    padding: 30px;
+    z-index: 200;
+    width: 650px;
+    background: #fff;
+    border-radius: 4px;
+}
+
+.review-form .close-form {
+    position: absolute;
+    top: -35px;
+    right: -30px;
+    font-size: 21px;
+    cursor: pointer;
+}
+
+.record-form .close-form {
+    position: absolute;
+    top: -35px;
+    right: -30px;
+    font-size: 21px;
     cursor: pointer;
 }
