--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -1830,6 +1830,40 @@ html.no-scroll body {
     align-items: center;
 }
 
+.first-metro>span {
+    width: 8px;
+    height: 8px;
+    background: #0C0C0C;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.second-metro>span {
+    width: 8px;
+    height: 8px;
+    background: #a12e2e;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.second-metro>span:last-child {
+    margin-left: 10px;
+    background: #588035;
+}
+
+.second-metro>span:first-child {
+    margin-left: 0;
+    background: #a12e2e;
+}
+
+.third-metro>span {
+    width: 8px;
+    height: 8px;
+    background: #588035;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
 .doctor-card__dates p {
     background: #F0F3F8;
     text-align: center;
@@ -2887,13 +2921,96 @@ html.no-scroll body {
     font-size: 13px;
 }
 
-.doctor-card__record-clinic {
+.doctor-card__record-clinic-other {
     color: #000;
     font-size: 16px;
     font-weight: 600;
     border-radius: 4px;
     background: rgba(81, 111, 166, 0.29);
     padding: 5px 15px;
+}
+
+.doctor-card__record-clinic-other {
+    border-radius: 4px;
+    background: rgba(81, 111, 166, 0.29);
+    max-width: 381px;
+    width: 100%;
+    height: 46px;
+    margin: 5px 0 8px;
+    font-weight: 500;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.doctor-card__record-clinic-other img {
+    -webkit-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+
+.doctor-card__record-clinic {
+    border-radius: 4px;
+    background: rgba(81, 111, 166, 0.29);
+    max-width: 381px;
+    width: 100%;
+    height: 46px;
+    margin: 5px 0 8px;
+    font-weight: 500;
+}
+
+.dropbtn {
+    color: #000000;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 0 10px;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #28354d49;
+    border-radius: 4px;
+}
+
+.dropdown-clinic {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+}
+
+.reverse-arrow img {
+    -webkit-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    width: 100%;
+}
+
+.dropdown-content a {
+    color: #516FA6;;
+    padding: 10px;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd
+}
+
+.show {
+    display:block;
 }
 
 .doctor-card__geo p {
@@ -2914,6 +3031,8 @@ html.no-scroll body {
     color: rgba(0, 0, 0, 0.70);
     font-size: 12px;
     padding: 2px 5px;
+    display: flex;
+    align-items: center;
 }
 
 .doctor-card__metro img {
